--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">FocusTimer</string>
     <string name="level">Level</string>
-
     <string name="focus_setting">Settings</string>
     <string name="focus_time_prefs_title">Select focus time</string>
     <string name="focus_failed_reward_pref_title">Reward for unsuccessful focus</string>
     <string name="setting_focus_time_set">Set</string>
     <string name="setting_focus_time_cancel">Cancel</string>
     <string name="focus_time_key" translatable="false">focus_time_key</string>
+    <string name="focus_failed_reward_key" translatable="false">focus_failed_reward</string>
 </resources>
