--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Focus Timer</string>
-    <string name="level">Уровень</string>
+    <string name="level">Уровень:</string>
     <string name="focus_setting">Настройки</string>
     <string name="focus_time_prefs_title">Выберите время фокуса</string>
     <string name="focus_failed_reward_pref_title">Награда за неудачный фокус</string>
@@ -11,4 +11,12 @@
     <string name="focus_ringtone">Выберите звук для окончания фокуса</string>
     <string name="focus_vibrate">Вибрация</string>
     <string name="silent">Нет звука</string>
+    <string-array name="levels">
+        <item>Новичок</item>
+        <item>Начинающий</item>
+        <item>Ученик</item>
+        <item>Опытный</item>
+        <item>Эксперт</item>
+        <item>Мастер</item>
+    </string-array>
 </resources>
