Rewrite timer service implementation
It turned out that IntentService is not appropriate for timer, cause
it stops instantly after handleIntent finish, and I want to make handler-
based timer. So, I took IntentService implementation and rewrite it
according to my needs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="focus_ringtone">Choose finished focus ringtone</string>
     <string name="focus_vibrate">Vibrate</string>
     <string name="silent">Silent</string>
+    <string name="stop">Stop</string>
     <string-array name="levels">
         <item>Novice</item>
         <item>Beginner</item>
